# kplc_alerts

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  render.yaml
notifications/: Cargo.toml
notifications/src/: delivery.rs  notify.rs
plugins/power_interuptions/pdf_text_parser/: Cargo.toml
plugins/power_interuptions/pdf_text_parser/src/: interpreter.rs  lib.rs  scanner.rs  token.rs
plugins/power_interuptions/web_page_extractor/: Cargo.toml
plugins/power_interuptions/web_page_extractor/src/: lib.rs  pdf_extractor.rs  text_extractor.rs
rust-workspace/: .env.local.example  .env.staging  Cargo.toml
rust-workspace/background_workers/: Cargo.toml  sqlx-data.json
rust-workspace/background_workers/consumer/: Cargo.toml  Dockerfile
rust-workspace/background_workers/consumer/configuration/: base.yaml
rust-workspace/background_workers/consumer/src/: main.rs
rust-workspace/background_workers/producer/: Cargo.toml
rust-workspace/background_workers/producer/src/: lib.rs  location_details.rs  preferred_delivery_strategy.rs  producer.rs  subscribe_to_location.rs  text_search.rs
rust-workspace/background_workers/src/: configuration.rs
rust-workspace/background_workers/src/producer/: mod.rs  subscribe_to_location.rs
rust-workspace/background_workers/src/tasks/: mod.rs  subscribe_to_location.rs  text_search.rs
rust-workspace/background_workers/src/utils/: mod.rs  progress_tracking.rs
rust-workspace/background_workers/tasks/: Cargo.toml  sqlx-data.json
rust-workspace/background_workers/tasks/src/: configuration.rs  constants.rs  get_token.rs  lib.rs  location_details.rs  subscribe_to_location.rs  text_search.rs
rust-workspace/background_workers/tokenizer/: Cargo.toml
rust-workspace/background_workers/tokenizer/configuration/: base.yaml
rust-workspace/background_workers/tokenizer/src/: main.rs
rust-workspace/configuration/: base.yaml  dev.docker-compose.yml  test.yaml
rust-workspace/docker/: consumer.Dockerfile  dragon_fly.Dockerfile  dry_run.Dockerfile  tokenizer.Dockerfile
rust-workspace/entities/: Cargo.toml
rust-workspace/entities/src/: lib.rs
rust-workspace/entities/src/contracts/: authenticate.rs  create_or_update_subscriber.rs  find_subscriber.rs
rust-workspace/entities/src/find_subscriber/: mod.rs
rust-workspace/entities/src/locations/: mod.rs
rust-workspace/entities/src/notifications/: mod.rs  strategy.rs
rust-workspace/entities/src/power_interruptions/: location.rs
rust-workspace/entities/src/subscriptions/: details.rs  mod.rs
rust-workspace/http_server/: Cargo.toml
rust-workspace/http_server/configuration/: base.yaml
rust-workspace/http_server/src/: app_container.rs  authentication.rs  errors.rs  main.rs
rust-workspace/http_server/src/routes/: authentication.rs  import_planned_power_interruptions.rs  mod.rs
rust-workspace/http_server_plugin/: Cargo.toml
rust-workspace/http_server_plugin/configuration/: base.yaml
rust-workspace/http_server_plugin/src/: authentication.rs  errors.rs
rust-workspace/http_server_plugin/src/routes/: mod.rs
rust-workspace/import_and_notify_affected_subscribers/: Cargo.toml
rust-workspace/import_and_notify_affected_subscribers/src/: lib.rs
rust-workspace/import_power_interruptions/job_runners/: Cargo.toml
rust-workspace/import_power_interruptions/job_runners/configuration/: base.yaml
rust-workspace/import_power_interruptions/job_runners/src/: alert_email_sender.rs  lib.rs
rust-workspace/import_power_interruptions/pdf_text_parser/: Cargo.toml
rust-workspace/import_power_interruptions/web_page_extractor/: Cargo.toml
rust-workspace/import_power_interruptions_plugins/web_page_extractor/: Cargo.toml
rust-workspace/import_scheduled_interruptions/: Cargo.toml  sqlx-data.json
rust-workspace/import_scheduled_interruptions/src/: config.rs  db_access.rs  lib.rs
rust-workspace/location_search/: Cargo.toml  sqlx-data.json
rust-workspace/location_search/configuration/: base.yaml
rust-workspace/location_search/src/: config.rs  db_access.rs  lib.rs
rust-workspace/location_searcher/: Cargo.toml
rust-workspace/location_searcher/configuration/: test.yaml
rust-workspace/location_searcher/src/: configuration.rs  lib.rs  location_details_finder.rs  searcher.rs  status_code.rs  text_search.rs
rust-workspace/location_subscription/: Cargo.toml  sqlx-data.json
rust-workspace/location_subscription/src/: config.rs  lib.rs
rust-workspace/notification_plugins/sms/: Cargo.toml
rust-workspace/notifications/: Cargo.toml  sqlx-data.json
rust-workspace/notifications/src/: config.rs  db_access.rs  delivery.rs  lib.rs  notify.rs
rust-workspace/once_job/: Cargo.toml
rust-workspace/once_job/src/: main.rs
rust-workspace/plugins_import_power_interruptions/pdf_text_parser/: Cargo.toml
rust-workspace/plugins_storage/sqlx_postgres/: Cargo.toml
rust-workspace/plugins_web/http_server/: Cargo.toml
rust-workspace/power_interuptions/: Cargo.toml
rust-workspace/power_interuptions/src/: location.rs
rust-workspace/scheduled_interruptions/: Cargo.toml
rust-workspace/shared_kernel/: Cargo.toml
rust-workspace/shared_kernel/src/: area_name.rs  configuration.rs  http_client.rs  lib.rs  location_ids.rs  non_empty_string.rs  subscriber_id.rs  tracing.rs
rust-workspace/storage/redis_client/: Cargo.toml
rust-workspace/storage/sqlx_postgres/: Cargo.toml  docker-compose.yml  sqlx-data.json
rust-workspace/storage_plugins/sqlx_postgres/: Cargo.toml
rust-workspace/subscriber/: Cargo.toml
rust-workspace/subscribers/: Cargo.toml
rust-workspace/subscribers/src/: db_access.rs  lib.rs
rust-workspace/use_cases/: Cargo.toml
rust-workspace/use_cases/src/: actor.rs  lib.rs  repositories.rs
subscriptions/: Cargo.toml
use_cases/: Cargo.toml
use_cases/src/: actor.rs  lib.rs
use_cases/src/create_account/: mod.rs
use_cases/src/import_planned_blackouts/: mod.rs
use_cases/src/locations/: data.rs
use_cases/src/notifications/: mod.rs
use_cases/src/notify_subscribers/: mod.rs
use_cases/src/renew_subscription/: mod.rs
use_cases/src/subscriptions/: mod.rs  renew_subscription.rs
(+311 files in other folders)
