[package]
name = "notifications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
use_cases = { path = "../use_cases" }
power_interuptions = { path = "../power_interuptions" }
subscriptions = { path = "../subscriptions" }