[workspace]
members = [
    "storage/*",
    "http_server",
    "subscribers",
    "shared_kernel",
    "location_subscription",
    "location_search",
    "notifications",
    "import_and_notify_affected_subscribers",
    "scheduled_interruptions",
    "once_job",
    "background_workers"
]

[profile.dev.package.sqlx-macros]
opt-level = 3


[workspace.dependencies]
## Tracing and OTLP
tracing = "0.1.36"
tracing-attributes = "0.1.23"
tracing-log = "0.1.3"
tracing-actix-web = { version = "0.6.0", features = ["opentelemetry_0_17"] }
actix-web-opentelemetry = { version = "0.12.0", features = ["sync-middleware"] }
uuid = { version = "1.3.0", features=["v4", "serde"] }
