[package]
name = "use_cases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
chrono = "0.4.23"
subscriptions = { path = "../subscriptions" }
power_interuptions = { path = "../power_interuptions" }
