[package]
name = "use_cases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
chrono = "0.4.23"
subscriptions = { path = "../subscriber" }
power_interuptions = { path = "../power_interuptions" }
[dependencies.uuid]
version = "1.3.0"
features = ["v4"]
thiserror = "1.0.38"