[package]
name = "background_workers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
celery = "0.5.3"
config = "0.13.3"
async-trait = "0.1.67"
secrecy = { version = "0.8", features = ["serde"] }
chrono-tz = { version = "0.8.1", features = ["serde"] }
chrono = "0.4.23"
regex = "1.7.1"

tokio = { version = "1.26.0", features = ["full"] }
serde = "1.0.154"
serde_json = "1.0.94"
sqlx = { version = "0.6", features = [ "offline", "runtime-tokio-native-tls" , "postgres", "uuid", "time", "chrono", "json" ] }

redis = { version = "0.22", features = ["tokio-comp"] }
url = "2.3.1"
itertools = "0.10.5"

async_once = "0.2.6"
lazy_static = "1.4.0"
futures = "0.3"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
num_cpus = "1.15.0"
entities = { path = "../entities" }
shared_kernel = { path = "../shared_kernel" }
use_cases = { path = "../use_cases" }
redis_client = { path = "../storage/redis_client" }
location_subscription = { path = "../location_subscription" }
notifications = { path = "../notifications" }
location_search = { path = "../location_search" }

tracing.workspace = true
tracing-log.workspace = true

[dependencies.uuid]
version = "1.3.0"
features = ["v4"]
