[package]
name = "entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
chrono = "0.4.23"
chrono-tz = "0.8.1"
url = "2.3.1"
validator = "0.16.0"
serde_json = "1.0.94"
serde = "1.0.154"

[dependencies.uuid]
version = "1.3.0"
features = ["v4"]
