[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
actix-governor = "0.4.0"
actix-web-httpauth = "0.8.0"
anyhow = "1.0.69"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.38"
tokio = { version = "1.17.0", features = ["full"] }
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
ureq = { version = "2.6", features = ["json"] }
url = { version = "2.3.1", features = ["serde"] }
use_cases = { path = "../use_cases" }
sqlx_postgres = { path = "../storage/sqlx_postgres" }
shared_kernel = { path = "../shared_kernel" }
location_subscription = { path = "../location_subscription" }
background_workers = { path= "../background_workers" }
itertools = "0.10.5"


tracing.workspace = true
tracing-attributes.workspace = true
tracing-log.workspace = true
tracing-actix-web.workspace = true
actix-web-opentelemetry.workspace = true

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",
    "serde"
]
