[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.0"
anyhow = "1.0.69"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.38"
tokio = { version = "1.17.0", features = ["full"] }
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
ureq = { version = "2.6", features = ["json"] }
use_cases = { path = "../use_cases" }
entities = { path = "../entities" }
sqlx_postgres = { path = "../storage_plugins/sqlx_postgres" }