[package]
name = "import_and_notify_affected_subscribers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.67"
url = "2.3.1"
serde = {  version= "1.0.152", features=["derive"] }
serde_json = { version = "1.0.93" }
tokio = { version = "1.26.0", features = ["full"] }
secrecy = { version = "0.8", features = ["serde"] }
config = "0.13.3"
lazy_static = "1.4.0"
itertools = "0.10.5"

shared_kernel = { path = "../shared_kernel" }
sqlx_postgres = { path = "../storage/sqlx_postgres" }
background_workers = { path = "../background_workers", features=["internal_contracts"] }
location_subscription = { path = "../location_subscription" }
notifications = { path = "../notifications" }
scheduled_interruptions = { path = "../scheduled_interruptions" }
subscribers = { path = "../subscribers" }

tracing.workspace = true
tracing-log.workspace = true
