[package]
name = "location_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
anyhow = "1.0.70"
url = "2.3.1"
secrecy = { version = "0.8", features = ["serde"] }
tokio = { version = "1.26.0", features = ["full"] }
serde = "1.0.154"
serde_json = "1.0.94"
itertools = "0.10.5"
async-trait = "0.1.64"
sqlx = { version = "0.6", features = [ "offline", "runtime-tokio-native-tls" , "postgres", "uuid", "time", "chrono", "json" ] }
async_once = "0.2.6"
lazy_static = "1.4.0"

shared_kernel = { path = "../shared_kernel" }
sqlx_postgres = { path = "../storage/sqlx_postgres" }

tracing.workspace = true
tracing-log.workspace = true

uuid.workspace = true

[dev-dependencies]
httpmock = "0.6"
