[package]
name = "location_searcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
config = "0.13.3"
chrono = "0.4.23"
futures = "0.3"
chrono-tz = "0.8.1"
thiserror = "1.0.38"
secrecy = { version = "0.8", features = ["serde"] }
serde = {  version= "1.0.152", features=["derive"] }
serde_json = { version = "1.0.93" }
url = "2.3.1"
entities = { path = "../entities" }
shared_kernel = { path = "../shared_kernel" }
use_cases = { path = "../use_cases" }

