[package]
name = "locations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
anyhow = "1.0.70"
shared_kernel = { path = "../shared_kernel" }
entities = { path = "../entities" }
sqlx_postgres = { path = "../storage/sqlx_postgres" }