[package]
name = "notifications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
anyhow = "1.0.69"

entities = { path = "../entities" }
sqlx_postgres = { path = "../storage/sqlx_postgres" }
