[package]
name = "once_job"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"

tokio = { version = "1.26.0", features = ["full"] }
location_subscription = { path = "../location_subscription" }
shared_kernel = { path = "../shared_kernel" }

tracing.workspace = true
tracing-log.workspace = true
