[package]
name = "scheduled_interruptions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
chrono = "0.4.23"
chrono-tz = "0.8.1"
futures = "0.3"
pdf-extract = "0.6.5"
lazy_static = "1.4.0"
bytes = "1.4.0"
regex = "1.7.1"
reqwest = { version = "0.11" }
reqwest-middleware = "0.2.0"
reqwest-retry = "0.2.1"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
async_once = "0.2.6"
sqlx = { version = "0.6", features = [ "offline", "runtime-tokio-native-tls" , "postgres", "uuid", "time", "chrono", "json" ] }
serde = "1.0.154"
serde_json = "1.0.94"
secrecy = { version = "0.8", features = ["serde"] }
itertools = "0.10.5"
multipeek = "0.1.2"


entities = { path = "../entities" }
shared_kernel = { path = "../shared_kernel" }
sqlx_postgres = { path = "../storage/sqlx_postgres" }

tracing.workspace = true
tracing-log.workspace = true


[dependencies.uuid]
version = "1.3.0"
features = ["v4"]
