[package]
name = "shared_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
config = "0.13.3"

lazy_static = "1.4.0"
bytes = "1.4.0"
regex = "1"
reqwest = { version = "0.11" }
reqwest-middleware = "0.2.0"
reqwest-retry = "0.2.1"
url = "2.3.1"
serde = {  version= "1.0.152", features=["derive"] }
serde_json = { version = "1.0.93" }
thiserror = "1.0.40"



tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-opentelemetry = "0.17.4"
opentelemetry = { version = "0.17.0", features = ["metrics", "rt-tokio", "rt-tokio-current-thread"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }

opentelemetry-otlp = "0.10.0"