[package]
name = "shared_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
config = "0.13.3"

lazy_static = "1.4.0"
bytes = "1.4.0"
regex = "1"
reqwest = { version = "0.11" }
reqwest-middleware = "0.2.0"
reqwest-retry = "0.2.1"
url = "2.3.1"
serde = {  version= "1.0.152", features=["derive"] }
serde_json = { version = "1.0.93" }
thiserror = "1.0.40"
tonic = "0.8.0"
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = { version = "0.8.1", features = ["serde"] }


tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.19.0"
opentelemetry = { version = "0.19.0", features = ["metrics", "rt-tokio", "rt-tokio-current-thread"] }
opentelemetry-otlp = { version = "0.12.0", features = ["http-proto", "reqwest-client"] }
reqwest-tracing = "0.4.4"
tracing.workspace = true
tracing-log.workspace = true
