[package]
name = "subscribers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = { version = "0.8.1", features = ["serde"] }
url = { version = "2.3.1", features = ["serde"] }
validator = "0.16.0"
serde_json = "1.0.94"
serde = "1.0.154"
itertools = "0.10.5"
sqlx = { version = "0.6", features = [ "offline", "runtime-tokio-native-tls" , "postgres", "uuid", "time", "chrono", "json" ] }
async_once = "0.2.6"
lazy_static = "1.4.0"

shared_kernel = { path = "../shared_kernel" }

sqlx_postgres = { path = "../storage/sqlx_postgres" }


uuid.workspace = true
tracing.workspace = true
tracing-log.workspace = true