[package]
name = "use_cases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
chrono = "0.4.23"
subscriptions = { path = "../subscriber" }
thiserror = "1.0.38"
power_interuptions = { path = "../power_interuptions" }
url = "2.3.1"
serde = {  version= "1.0.152", features=["derive"] }
serde_json = { version = "1.0.93" }
[dependencies.uuid]
version = "1.3.0"
features = ["v4"]
