[package]
name = "use_cases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
chrono = "0.4.23"
chrono-tz = "0.8.1"
thiserror = "1.0.38"
entities = { path = "../entities" }
url = "2.3.1"
futures = "0.3"
serde = {  version= "1.0.152", features=["derive"] }
serde_json = { version = "1.0.93" }
tokio = { version = "1.25.0", features = ["full"] }

shared_kernel = { path = "../shared_kernel" }

tracing.workspace = true
tracing-log.workspace = true

[dependencies.uuid]
version = "1.3.0"
features = ["v4"]


[dev-dependencies]
mockall = "0.11.3"
