[package]
name = "web_page_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
chrono = "0.4.23"
pdf-extract = "0.6.4"
lazy_static = "1.4.0"
regex = "1"
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
use_cases = { path = "../../../use_cases" }
