[package]
name = "tokenizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.22", features = ["tokio-comp"] }
tokio = { version = "1.26.0", features = ["full"] }
futures-util = "0.3"
futures = "0.3.26"
anyhow = "1.0.69"
serde = {version = "1.0.154", features = ["derive"]}
shared_kernel = { path = "../../shared_kernel" }