[package]
name = "redis_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"

redis = { version = "0.22", features = ["tokio-comp"] }
tokio = { version = "1.26.0", features = ["full"] }

async-trait = "0.1.67"
async_once = "0.2.6"
lazy_static = "1.4.0"