[package]
name = "sqlx_postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
config = "0.13.3"
sqlx = { version = "0.6", features = [ "offline", "runtime-tokio-native-tls" , "postgres", "uuid", "time", "chrono", "json" ] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
futures = "0.3"
async-trait = "0.1.64"
itertools = "0.10.5"
serde = {  version= "1.0.152", features=["derive"] }
serde_json = { version = "1.0.93" }
serde-aux = "4.1.2"
secrecy = { version = "0.8", features = ["serde"] }
url = "2.3.1"
use_cases = { path = "../../use_cases" }
entities = { path = "../../entities" }
location_searcher = { path = "../../location_searcher" }
[dependencies.uuid]
version = "1.3.0"
features = [
    "v4"
]

[profile.dev.package.sqlx-macros]
opt-level = 3
