[package]
name = "pdf_text_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
chrono = "0.4.23"
chrono-tz = "0.8.1"
regex = "1"
multipeek = "0.1.2"
lazy_static = "1.4.0"
web_page_extractor = { path = "../web_page_extractor" }
power_interuptions = { path = "../../../power_interuptions" }
use_cases = { path = "../../../use_cases" }
